test/tests/compiler/18_structures/invalid_types/extra_credit/scalar_required/cast_union_to_int.plx
#  Can't cast union to scalar type even if it has the right size
type union u(    i: i32    )

pub fn main(none) i32 {
    x: union u = $(10)
    return cast<i32>(x)
}
